tests/errors/cpp6.h
! Not declared
z12 = 5
